FIX hide scrollbar when lightbox is opened

--- a/src/sass/base/_global.scss
+++ b/src/sass/base/_global.scss
@@ -5,7 +5,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700');
 
 html {
-  overflow-x: hidden;
+  overflow: hidden;
+  height: 100%;
 }
 
 body {
@@ -14,6 +15,7 @@ body {
   background: $white;
   color: $black;
   font-family: 'roboto', sans-serif;
+  height: 100%;
   &.is-active {
     overflow-y: hidden;
   }
